--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,9 @@ dependencies:
   flutter_map:
     git:
       url: https://github.com/fleaflet/flutter_map.git
-
+  syncfusion_flutter_datepicker: ^20.2.38
+  geolocator: ^9.0.0
+  fl_chart: ^0.55.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -43,8 +45,7 @@ dev_dependencies:
     sdk: flutter
 
   
-  geolocator: ^9.0.0
-  fl_chart: ^0.55.0
+ 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
