--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   syncfusion_flutter_datepicker: ^20.2.38
   geolocator: ^9.0.0
   fl_chart: ^0.55.0
+  easy_sidemenu: ^0.3.1
+  flutter_svg: ^1.0.2
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -72,7 +74,8 @@ flutter:
   #   - images/a_dot_ham.jpeg
   assets:
   - assets/
-  - assets/userpin.png
+  - assets/images/
+  - assets/images/userpin.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
