--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
       url: https://github.com/fleaflet/flutter_map.git
   geolocator: ^9.0.0
   flutter_staggered_grid_view: ^0.6.2
+  desktop_window: ^0.4.0
+   
 
 dev_dependencies:
   flutter_test:
