--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -22,7 +22,7 @@ dependencies:
   geolocator: ^9.0.0
   flutter_staggered_grid_view: ^0.6.2
   desktop_window: ^0.4.0
-   
+  flutter_masked_text2: ^0.9.1
 
 dev_dependencies:
   flutter_test:
